
= rufus-scheduler CHANGELOG.txt


== rufus-scheduler - 3.5.1    not yet released


== rufus-scheduler - 3.5.0    released 2018-05-15

- Use fugit to parse durations
- Drop .parse_time_string and .parse_duration_string
- Use fugit to parse cronlines


== rufus-scheduler - 3.4.2    released 2017-05-24

(had yanked 3.4.1, going 3.4.2)


== rufus-scheduler - 3.4.1    released 2017-05-24

- Let #schedule accept a CronLine instance, gh-247


== rufus-scheduler - 3.4.0    released 2017-03-23

- Stop supporting Ruby < 1.9
- Drop ZoTime for et-orbi's Etorbi::EoTime, gh-240
- Fix for ZooKeeper example, thanks to @djrodgerspryor, gh-238


== rufus-scheduler - 3.3.4    released 2017-02-16

- More detailed "cannot determine timezone from nil" message, gh-237


== rufus-scheduler - 3.3.3    released 2017-01-29

- use Rails' timezone by default if Rails is present, gh-230, gh-233,
  thanks Alexander Deeb
- is_a?(Fixnum) replaced by is_a?(Integer), gh-232, thanks Cody Cutrer
- Fix for every double trigger, gh-231, thanks Sofia Bravo


== rufus-scheduler - 3.3.2    released 2017-01-05

- Fix ZoTime issue with Time.zone.now #=> 'CST', thanks zzjin
- Fix cron weekdays + monthdays, by Dominik Sander, https://github.com/dsander
- Speedup CronLine#brute_frequency, by Dominik Sander
- Use object_id instead of hash to make Job id


== rufus-scheduler - 3.3.1    released 2016-12-03

- gh-222 fall back on ENV['TZ'] when Time.now.zone is something
  like "中国标准时间" (ask for "Asia/Shanghai"), thanks to
  https://github.com/lovingyu


== rufus-scheduler - 3.3.0    released 2016-11-28

- Bring in Piavka's Job#trigger_off_schedule, gh-214
- Reject "day 0" in cronlines, thanks to Ramon Tayag, https://github.com/ramontayag
- Move away from ENV['TZ'], thanks to Akinori Musha, https://github.com/knu
- Fix .parse_to_time vs Date issue, as reported by @nsatragno


== rufus-scheduler - 3.2.2    released 2016-08-14

- job opt hash preservation, as suggested in gh-212, by https://github.com/d-m-u